# hoti-rs

./: .gitignore  .gitmodules  Cargo.toml
assets/containment/: Esoteric.png~  Euclid.png~  Explained.png~  Keter.png~  Neutralized.png~  Pending.png~  Safe.png~
assets/disruption/: Amida.png~  Dark.png~  Ekhi.png~  Keneq.png~  Vlam.png~
assets/risk/: Caution.png~  Critical.png~  Danger.png~  Notice.png~  Warning.png~
assets/secondary/: Apollyon.png~  Archon.png~  Cernunnos.png~  Decommissioned.png~  Hiemal.png~  Thaumiel.png~  Tiamat.png~  Ticonderoga.png~  Uncontained.png~
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: lib.rs  main.rs
src/gcloud/: mod.rs  text_to_speech.rs
src/scp/: mod.rs
src/video_gen/: image_manager.rs  mod.rs  subtitle.rs  ui.rs
