[package]
name = "hoti-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["proc_macros"]

[dependencies]
anyhow = "1.0.71"
async-openai = "0.11.1"
base64 = "0.21.2"
dotenvy = "0.15.7"
markup5ever = "0.11.0"
reqwest = { version = "0.11.18", features = ["json"] }
scraper = "0.16.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "fs",
    "process",
] }

proc_macros = { path = "proc_macros" }
image = "0.24.6"
mp3-metadata = "0.3.4"
glam = "0.24.0"
gstreamer = "0.20.0"
gstreamer-app = "0.20.0"
taffy = "0.3.12"
rusttype = "0.9.3"
imageproc = "0.23.0"
reqwest-retry = "0.2.2"
reqwest-middleware = "0.2.2"
google-youtube3 = "5.0.2"
